# ansible-workbench

./: .gitignore  .pre-commit-config.yaml  .vale.ini  README.md  cookiecutter.json  pyproject.toml
.cicd-tools/boxes/bootstrap/changlog/: config.json
.github/: setup.sh  template.sh
.github/scenarios/: 0.toml_linting-0.workflow_linting.json  0.toml_linting-1.workflow_linting.json  1.toml_linting-0.workflow_linting.json  1.toml_linting-1.workflow_linting.json
.github/scripts/: job-50-test-precommit.sh  job-60-prune-test-releases.sh  job-60-test-push.sh  prune_test_releases.sh  requirements.sh  setup.sh  step-render-template.sh  step-setup-environment.sh  task-render-template.sh  task-template-requirements.sh  template.sh  test_precommit.sh  test_push.sh  workflow-setup-environment.sh
.github/workflows/: .job-00-start.yml  .job-00-success.yml  .job-10-security.yml  .job-30-documentation.yml  .job-40-molecule.yml  .job-50-precommit.yml  .job-60-remote-push.yml  .job-80-commit-lint.yml  .job-80-shell-lint.yml  .job-80-toml-lint.yml  .job-80-workflow-lint.yml  .job-80-yaml-lint.yml  .job-99-create-release.yml  self-test.yml  workflow-template-test.yml
.vale/Vocab/ansible-workbench/: accept.txt
hooks/: post_gen_project.sh
scripts/: test.sh  update.sh
{{cookiecutter.project_slug}}/: .ansible-lint  .gitignore  .pre-commit-config.yaml  .travis.yml  .yamllint.yml  README.md  pyproject.toml  requirements.yml
{{cookiecutter.project_slug}}/.cicd-tools/boxes/bootstrap/commitizen/: pre_bump.sh
{{cookiecutter.project_slug}}/.cicd-tools/boxes/bootstrap/libraries/: colours.sh  environment.sh  logging.sh  tools.sh
{{cookiecutter.project_slug}}/.cicd-tools/boxes/bootstrap/pre-commit/: lint-ansible.sh  lint-github-workflow-header.sh  spelling-commit-message.sh
{{cookiecutter.project_slug}}/.cicd-tools/boxes/bootstrap/schemas/: cookiecutter.json  manifest.json
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/config/: markdown.link.check.json
{{cookiecutter.project_slug}}/.github/config/workflows/: push.json  workflow-publish-to-galaxy.json  workflow-push.json
{{cookiecutter.project_slug}}/.github/deactivated/: .job-10-security.yml  .job-40-molecule-lint.yml  .job-40-molecule-test.yml  .job-80-toml-lint.yml  workflow-publish-to-galaxy.yml  workflow-push.yml
{{cookiecutter.project_slug}}/.github/markdown/: ISSUE_TEMPLATE.md
{{cookiecutter.project_slug}}/.github/scripts/: ansible_cache.sh  branch_filter.sh  changelog.sh  job-99-check-version.sh  job-99-create-changelog.sh  job-99-create-release.js  job-99-release-candidate.sh  notifications.sh  poetry.sh  pushed_commit_range.sh  release_candidate.sh  setup.sh  step-setup-environment.sh  task-setup-ansible-cache.sh  task-slack-notification.sh  task-use-poetry.sh  version.sh  workflow-determine-pushed-commits.sh  workflow-identify-molecule-scenarios.sh  workflow-set-value.sh  workflow-setup-environment.sh  workflow_json_value.sh
{{cookiecutter.project_slug}}/.github/workflows/: .job-00-start.yml  .job-00-success.yml  .job-30-documentation.yml  .job-80-commit-lint.yml  .job-80-workflow-lint.yml  .job-80-yaml-lint.yml  .job-99-create-release.yml  .job-99-import-role.yml  push.yml  release.yml  workflow-publish-to-galaxy.yml  workflow-push.yml
{{cookiecutter.project_slug}}/.pre-commit/: .poetry-compatible.sh  commit-lint.sh  molecule-lint.sh  toml-lint.sh  yaml-lint.sh
{{cookiecutter.project_slug}}/.vale/Vocab/{{cookiecutter.project_slug}}/: accept.txt
{{cookiecutter.project_slug}}/defaults/: main.yml
{{cookiecutter.project_slug}}/handlers/: main.yml
{{cookiecutter.project_slug}}/meta/: main.yml
{{cookiecutter.project_slug}}/molecule/default/: molecule.yml
{{cookiecutter.project_slug}}/molecule/docker1/: converge.yml  molecule.yml  verify.yml
{{cookiecutter.project_slug}}/molecule/hostmachine1/: converge.yml  molecule.yml
{{cookiecutter.project_slug}}/tasks/: main.yml
{{cookiecutter.project_slug}}/tests/: test.yml
{{cookiecutter.project_slug}}/vars/: main.yml
