
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core"]

[tool]

  [tool.poetry]
    authors = ["Niall Byrne <niall@niallbyrne.ca>"]
    description = "Ansible Role Development Environment."
    license = "MPL-2"
    name = "ansible-workbench"
    readme = "README.md"
    version = "0.1.6"

    [tool.poetry.dependencies]
      commitizen = "^2.42.1"
      pre-commit = "^3.1.0"
      python = ">=3.9.0,<4.0"
      yamllint = "^1.29.0"
