[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core']

[tool]
[tool.commitizen]
bump_message = 'bump(RELEASE): $current_version → $new_version'
pre_bump_hooks = ['.cicd-tools/boxes/bootstrap/commitizen/pre_bump.sh']
version = '0.2.0'
version_files = ['pyproject.toml:version']
version_provider = 'poetry'

[tool.poetry]
authors = ['Niall Byrne <niall@niallbyrne.ca>']
description = 'An Ansible role development environment, powered by Molecule.'
license = 'MPL-2'
name = 'ansible-workbench'
readme = 'README.md'
version = '0.2.0'

[tool.poetry.dependencies]
commitizen = '^3.0.0'
pre-commit = '^3.1.0'
python = '^3.9'
