
[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.0.0"]

[tool]

  [tool.poetry]
    authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
    description = "{{cookiecutter.description}}"
    name = "{{cookiecutter.project_slug}}"
    version = "0.1.0"

    [tool.poetry.dependencies]
      python = ">={{ cookiecutter._GITHUB_CI_PYTHON_VERSIONS | first }}.0,<4.0"

    [tool.poetry.dev-dependencies]
      ansible = "^5.2.0"
      ansible-compat = "<2.1.0"
      ansible-lint = "^5.3.2"
      commitizen = "^2.20.4"
      pre-commit = "^3.1.0"
      yamllint = "^1.26.3"

      [tool.poetry.dev-dependencies.molecule]
        extras = ["docker"]
        version = "^3.5.2"
