[build-system]
build-backend = 'poetry.core.masonry.api'
requires = ['poetry-core>=1.0.0']

[tool]
[tool.commitizen]
bump_message = 'bump(RELEASE): $current_version → $new_version'
pre_bump_hooks = ['.cicd-tools/boxes/bootstrap/commitizen/pre_bump.sh']
version = '0.1.0'
version_files = ['pyproject.toml:version']
version_provider = 'poetry'

[tool.poetry]
authors = ['{{cookiecutter.author}} <{{cookiecutter.email}}>']
description = '{{cookiecutter.description}}'
name = '{{cookiecutter.project_slug}}'
version = '0.1.0'

[tool.poetry.dependencies]
python = '^{{ cookiecutter._GITHUB_CI_DEFAULT_PYTHON_VERSIONS | first }}.0,<4.0'

[tool.poetry.dev-dependencies]
ansible = '^7.5.0'
commitizen = '^3.0.0'
pre-commit = '^3.1.1'
yamllint = '^1.29.0'

[tool.poetry.dev-dependencies.ansible-lint]
markers = "platform_system != 'Windows'"
version = '^6.12.2'

[tool.poetry.dev-dependencies.molecule]
extras = ['docker']
version = '^4.0.4'
